add basic links

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1 class="welcomeLogo"><i class="fa fa-film"></i> Movie Friends</h1>
     <div class="container">
-        <form>
+        <form action="/profile/1">
             <ul class="flex-outer">
                 <li>
                     <label for="userName">Username</label>
