Finished user-input frontend route

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i|Roboto:500" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <script type="text/javascript" src="./js/jQuery.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script>
     <!-- <script src="main.js"></script> -->
 </head>
 
@@ -19,13 +21,13 @@
             <ul class="flex-outer">
                 <li>
                     <label for="userName">Username</label>
-                    <input type="text" id="userName" placeholder="">
+                    <input type="text" id="user-name" placeholder="username">
                 </li>
                 <li>
                     <label for="pass">Password </label>
-                    <input type="text" id="pass" placeholder="">
+                    <input type="text" id="passwd" placeholder="password">
                 </li>
-                <button type="submit">Submit</button>
+                <button type="submit" id="index-submit">Submit</button>
             </ul>
 
         </form>
