I don't know how to get Friends data given User

--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,13 @@
             <ul class="flex-outer">
                 <li>
                     <label for="userName">Username</label>
-                    <input type="text" id="user-name" placeholder="username">
+                    <input type="text" id="username" placeholder="username">
                 </li>
                 <li>
                     <label for="pass">Password </label>
                     <input type="text" id="passwd" placeholder="password">
                 </li>
-                <button type="submit" id="index-submit">Submit</button>
+                <a href="/userprofile" id="index-submit"class="btn btn-danger btn-lg">Submit</a>
             </ul>
 
         </form>
