--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Movie Friends</title>
+    <title>Music Friends</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i|Roboto:500" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <script type="text/javascript" src="./js/jQuery.js"></script>
-    <script type="text/javascript" src="./js/index.js"></script>
     <!-- <script src="main.js"></script> -->
 </head>
 
@@ -21,13 +19,13 @@
             <ul class="flex-outer">
                 <li>
                     <label for="userName">Username</label>
-                    <input type="text" id="username" placeholder="username">
+                    <input type="text" id="userName" placeholder="">
                 </li>
                 <li>
                     <label for="pass">Password </label>
-                    <input type="text" id="passwd" placeholder="password">
+                    <input type="text" id="pass" placeholder="">
                 </li>
-                <a href="/userprofile" id="index-submit"class="btn btn-danger btn-lg">Submit</a>
+                <button type="submit">Submit</button>
             </ul>
 
         </form>
